--- a/TODO
+++ b/TODO
@@ -1,9 +1,1 @@
-move get image list to API
-start create container form
-image list as dropdown
-fill out form with a buncha fields
-submit request
-commit and push
-
-move lxgg front end to git repo root
-delete everything else
+make used by column have links to their respective containers e.g. /containers/amusing-goshawk, and then do routing for that
